Fix min problem

--- a/index.min.html
+++ b/index.min.html
@@ -13,7 +13,8 @@
     <title>
         <!--Title-->
     </title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/mdui@1.0.0/dist/css/mdui.min.css,gh/186526/onemanager-theme-renexmoe@v1/src/app.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.0/dist/css/mdui.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/186526/onemanager-theme-renexmoe@v1/src/app.min.css">
     <script src="https://cdn.jsdelivr.net/combine/npm/mdui@1.0.0/dist/js/mdui.min.js,gh/186526/onemanager-theme-renexmoe@v1/src/app.min.js"></script>
     <link rel="icon" href="<!--base_path-->favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="<!--base_path-->favicon.ico" type="image/x-icon" />
