--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,10 +3,16 @@
   <head>
     @@include("../components/head.html")
   </head>
-  <body class="mdui-appbar-with-toolbar mdui-theme-layout-auto mdui-loaded mdui-theme-accent-pink">
+  <body
+    class="mdui-appbar-with-toolbar mdui-theme-layout-auto mdui-loaded mdui-theme-accent-pink"
+  >
     @@include("../components/appbar.html")
     @@include("../components/drawer.html")
     @@include("../components/container.html")
   </body>
+  <!--IconValuesStart-->
+  { "music":"audiotrack", "video":"ondemand_video", "img":"image",
+  "pdf":"picture_as_pdf", "default":"insert_drive_file", "":""}
+  <!--IconValuesEnd-->
   <script type="module" src="/renexmoe_assets/js/app.js"></script>
 </html>
