Dev with Snowpack & Build with Webpack!

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
   </body>
   <!--IconValuesStart-->
   { "music":"audiotrack", "video":"ondemand_video", "img":"image",
-  "pdf":"picture_as_pdf", "default":"insert_drive_file", "":""}
+  "pdf":"picture_as_pdf", "default":"insert_drive_file"}
   <!--IconValuesEnd-->
   <script type="module" src="/renexmoe_assets/js/app.js"></script>
 </html>
