--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,7 +36,24 @@
   window.disableddarkmode = true;
 </script>
 <!--BackgroundEnd-->
+<!--BackgroundMStart-->
+<style>
+  body {
+    --bg: url("<!--BackgroundMUrl-->");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: var(--bg);
+  }
 
+  .mdui-shadow-3 {
+    background: rgba(255, 255, 255, 0.5);
+  }
+</style>
+<script>
+  window.disableddarkmode = true;
+</script>
+<!--BackgroundMEnd-->
   </head>
   <body
     class="mdui-appbar-with-toolbar mdui-theme-layout-auto mdui-loaded mdui-theme-accent-pink"
